--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <title>My Portofolio | Sutrisno</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-
-    <title>My Portofolio | Sutrisno</title>
+    <!-- MY CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <!-- Navbar Start -->
@@ -37,6 +37,14 @@
       </div>
     </nav>
     <!-- End Navbar -->
+
+    <!-- Jumbotron Start  -->
+    <section class="jumbotron text-center">
+      <img src="assets/images/Sutrisno.png" alt="sutrisno.png" width="200px" class="rounded-circle img-thumbnail">
+      <h1 class="display-4">Sutrisno</h1>
+      <p class="lead">Software Engineer | Entrepreneur </p>
+    </section>
+    <!-- Jumbroton Ends -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
