--- a/index.html
+++ b/index.html
@@ -43,8 +43,29 @@
       <img src="assets/images/Sutrisno.png" alt="sutrisno.png" width="200px" class="rounded-circle img-thumbnail">
       <h1 class="display-4">Sutrisno</h1>
       <p class="lead">Software Engineer | Entrepreneur </p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,192C672,160,768,96,864,96C960,96,1056,160,1152,165.3C1248,171,1344,117,1392,90.7L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
-    <!-- Jumbroton Ends -->
+    <!-- End Jumbroton -->
+
+    <!-- About Start -->
+    <section id="about">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>About Me</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          <div class="col-5">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sed magni necessitatibus libero similique quisquam quia?</p>
+          </div>
+          <div class="col-5">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at, delectus odio accusamus tempora hic pariatur voluptates consectetur .</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End About -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
