--- a/repeat-boostrap/index.html
+++ b/repeat-boostrap/index.html
@@ -36,14 +36,41 @@
     <!-- navbar end -->
 
     <!-- hero start -->
-    <section id="hero">
-        <div class="container text-center mt-5">
+    <section class="hero">
+        <div class="container text-center pt-5">
             <img src="assets/images/Sutrisno.jpg" class="img-thumbnail rounded-circle" alt="Sutrisno" width="200px">
-            <h1>Sutrisno</h1>
-            <p>Software Engineer || Entrepreneur</p>
+            <h1 class="display-5">Sutresno</h1>
+            <p class="lead">Software Engineer || Entrepreneur</p>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill="#fff"
+              fill-opacity="1"
+              d="M0,64L48,90.7C96,117,192,171,288,197.3C384,224,480,224,576,192C672,160,768,96,864,96C960,96,1056,160,1152,165.3C1248,171,1344,117,1392,90.7L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+            ></path>
+          </svg>
     </section>
     <!-- hero end -->
+
+    <!-- about start -->
+    <section id="about">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col">
+                    <h2 class="text-center">About</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center text-center">
+                <div class="col-4">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto debitis distinctio sunt? Accusantium dolorum labore, officia fuga iure numquam totam.
+                </div>
+                <div class="col-4">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum earum qui suscipit quisquam eligendi.
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
