--- a/repeat-boostrap/index.html
+++ b/repeat-boostrap/index.html
@@ -36,12 +36,10 @@
     <!-- navbar end -->
 
     <!-- hero start -->
-    <section class="hero">
-        <div class="container text-center pt-5">
-            <img src="assets/images/Sutrisno.jpg" class="img-thumbnail rounded-circle" alt="Sutrisno" width="200px">
+    <section class="hero text-center">
+        <img src="assets/images/Sutrisno.jpg" class="img-thumbnail rounded-circle" alt="Sutrisno" width="200px">
             <h1 class="display-5">Sutresno</h1>
             <p class="lead">Software Engineer || Entrepreneur</p>
-        </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path
               fill="#fff"
@@ -69,8 +67,86 @@
                 </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill="#e2edff"
+              fill-opacity="1"
+              d="M0,160L48,165.3C96,171,192,181,288,160C384,139,480,85,576,69.3C672,53,768,75,864,112C960,149,1056,203,1152,213.3C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+            ></path>
+          </svg>
     </section>
     <!-- about end -->
+
+    <!-- project start -->
+    <section id="project">
+        <div class="container">
+            <div class="row text-center mb-4">
+                <div class="col">
+                    <h2>Project</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="assets/images/projects/1.jpg" class="card-img-top" alt="projects">
+                        <div class="card-body">
+                          <h5 class="card-title">Project 1</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Read More .  .  .  </a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card" >
+                        <img src="assets/images/projects/2.jpg" class="card-img-top" alt="projects">
+                        <div class="card-body">
+                          <h5 class="card-title">Project 2</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Read More .  .  .  </a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="assets/images/projects/3.jpg" class="card-img-top" alt="projects">
+                        <div class="card-body">
+                          <h5 class="card-title">Project 3</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Read More .  .  .  </a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="assets/images/projects/4.jpg" class="card-img-top" alt="projects">
+                        <div class="card-body">
+                          <h5 class="card-title">Project 4</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Read More .  .  .  </a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="assets/images/projects/5.jpg" class="card-img-top" alt="projects">
+                        <div class="card-body">
+                          <h5 class="card-title">Project 5</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Read More .  .  .  </a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path
+              fill="#fff"
+              fill-opacity="1"
+              d="M0,192L40,197.3C80,203,160,213,240,197.3C320,181,400,139,480,133.3C560,128,640,160,720,181.3C800,203,880,213,960,197.3C1040,181,1120,139,1200,138.7C1280,139,1360,181,1400,202.7L1440,224L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+            ></path>
+          </svg>
+    </section>
+    <!-- project end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
