--- a/repeat-boostrap/index.html
+++ b/repeat-boostrap/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portofolio</title>
+    <!-- link bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- link icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- link css -->
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
@@ -59,10 +63,10 @@
                 </div>
             </div>
             <div class="row justify-content-center text-center">
-                <div class="col-4">
+                <div class="col-md-4">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto debitis distinctio sunt? Accusantium dolorum labore, officia fuga iure numquam totam.
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum earum qui suscipit quisquam eligendi.
                 </div>
             </div>
@@ -180,6 +184,12 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,0L34.3,26.7C68.6,53,137,107,206,112C274.3,117,343,75,411,90.7C480,107,549,181,617,186.7C685.7,192,754,128,823,117.3C891.4,107,960,149,1029,176C1097.1,203,1166,213,1234,192C1302.9,171,1371,117,1406,90.7L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
     </section>
     <!-- contact end -->
+
+    <!-- footer start -->
+    <footer class="bg-primary pb-3 text-center">
+        <p class="text-light">Created with <i class="bi bi-heart-fill text-danger"></i> By <a href="https://www.instagram.com/sutrisno_20/" class="text-light text-decoration-none">Sutresno</a></p>
+    </footer>
+    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
